JWT to P&A, security to P&A, security encode() key length issue