@@ -4,6 +4,7 @@ import com.auth0.jwt.JWT;
 import com.auth0.jwt.JWTVerifier;
 import com.auth0.jwt.exceptions.JWTVerificationException;
 import com.auth0.jwt.interfaces.DecodedJWT;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -29,46 +30,53 @@ import java.util.Set;
 
 public class JWTFilter extends BasicAuthenticationFilter {
     private final IUserRepository repository;
+    private final JWTUtility utility;
 
-    private final JWTUtility configuration;
-
-    public JWTFilter(AuthenticationManager authenticationManager, IUserRepository repository, JWTUtility configuration) {
+    public JWTFilter(AuthenticationManager authenticationManager, IUserRepository repository, JWTUtility utility) {
         super(authenticationManager);
         this.repository = repository;
-        this.configuration = configuration;
+        this.utility = utility;
     }
 
     @Override
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain) {
         final String header = request.getHeader(HttpHeaders.AUTHORIZATION);
-        if (header != null && !header.isEmpty() && !header.isBlank()) {
-            String bearer = header.replace("Bearer ", "");
-            NLAuthenticationToken authentication = getAuthentication(bearer);
-            SecurityContextHolder.getContext().setAuthentication(authentication);
-        } else {
+        if (StringUtils.isBlank(header)) {
             throw new UnauthorizedException("Nullable or empty auth header", "Not authorized");
         }
+
+        final String bearer = header.replace("Bearer ", "");
+        final NLAuthenticationToken authentication = getAuthentication(bearer);
+        SecurityContextHolder.getContext().setAuthentication(authentication);
     }
 
     private NLAuthenticationToken getAuthentication(String authToken) {
         final DecodedJWT jwt = verifyToken(authToken);
         final String email = jwt.getClaim(JWTClaim.EMAIL).asString();
-        final Optional<NLUser> optionalUser = repository.findByEmail(NLEmail.of(email));
+        final NLEmail nlEmail = NLEmail.of(email);
+        if (nlEmail.validate()) {
+            throw new UnauthorizedException("Invalid email", "Email does not mach regular expression");
+        }
 
-        if (optionalUser.isPresent() && JWTFilterHelper.resolveJWT(jwt)) {
+        final Optional<NLUser> optionalUser = repository.findByEmail(nlEmail);
+
+        if (optionalUser.isEmpty()) {
+            throw new UnauthorizedException("Access denied", "");
+        }
+
+        if (JWTFilterHelper.resolveJWT(jwt)) {
             final NLDUser user = NLDUser.of(optionalUser.get());
             final NLPrincipal principal = JWTFilterHelper.createPrincipal(user);
             final NLCredentials credentials = JWTFilterHelper.createCredentials(user);
             final Set<SimpleGrantedAuthority> roles = Collections.singleton(new SimpleGrantedAuthority(jwt.getClaim(JWTClaim.ROLE).asString()));
 
             return new NLAuthenticationToken(principal, credentials, roles);
-        } else {
-            throw new UnauthorizedException("Invalid email", "Could not find username with provided email");
         }
+        throw new UnauthorizedException("Access denied", "");
     }
 
     private DecodedJWT verifyToken(String authToken) {
-        final JWTVerifier verifier = JWT.require(configuration.hmac384()).build();
+        final JWTVerifier verifier = JWT.require(utility.hmac384()).build();
         try {
             return verifier.verify(authToken);
         } catch (JWTVerificationException e) {
